# gitbugactions-cpp-cmake-test-repo

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
src/: CMakeLists.txt  add.cpp  divide.cc  divide.hh  multiply.hpp  subtract.c
test/: CMakeLists.txt  test_add.cpp  test_divide.cpp  test_multiply.cpp  test_subtract.c
